--- a/server/webapp/WEB-INF/rails.new/Gemfile
+++ b/server/webapp/WEB-INF/rails.new/Gemfile
@@ -16,7 +16,8 @@ gem 'roar'
 
 group :test do
   gem 'minitest'
-  gem "jasmine-rails"
+  gem "jasmine"
+  gem 'jasmine_selenium_runner', :git => "https://github.com/jyotisingh/jasmine_selenium_runner.git", :require => false
   gem 'jasmine-jquery-rails'
   gem 'jasmine-junitreporter'
 
