Upgraded jgit. Added periodic GC that triggers at 1am

--- a/server/properties/smoke/cruise.properties
+++ b/server/properties/smoke/cruise.properties
@@ -25,6 +25,7 @@ cruise.cancel.hung.jobs.interval=30000
 cruise.reschedule.hung.builds.interval=600000
 cruise.build.assignment.service.interval=5000
 cruise.config.refresh.interval=5000
+cruise.config.gc.cron=0 0 1 * * ?
 cruise.shine.store.folder=db/shine
 cruise.disk.space.check.interval=5000
 cruise.agent.service.refresh.interval=5000
