--- a/server/properties/src/cruise.properties
+++ b/server/properties/src/cruise.properties
@@ -26,6 +26,7 @@ cruise.cancel.hung.jobs.interval=30000
 cruise.reschedule.hung.builds.interval=300000
 cruise.build.assignment.service.interval=5000
 cruise.config.refresh.interval=5000
+cruise.config.gc.cron=0 0 1 * * ?
 cruise.disk.space.check.interval=5000
 cruise.agent.service.refresh.interval=5000
 
