adding groups and environments added by partials to the main xml so they could be edited

--- a/server/properties/src/cruise.properties
+++ b/server/properties/src/cruise.properties
@@ -28,6 +28,7 @@ cruise.build.assignment.service.interval=5000
 cruise.config.refresh.interval=5000
 go.config.repo.gc.cron=0 0 7 ? * SUN
 go.config.repo.gc.check.interval=28800000
+go.config.partials.retry.interval=30000
 cruise.disk.space.check.interval=5000
 cruise.agent.service.refresh.interval=5000
 
